# rag-qa-proj

./: .dockerignore  .env.example  .gitignore  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/core/: document_processor.py  embeddings.py  rag_chain.py  ragas_evaluator.py  vector_store.py
tests/: test_api.py
